# crewai_swarm

./: README.md  pyproject.toml  report.md  report_draft.md  report_draft2.md
src/andy_swarm/: crew.py  main.py
src/andy_swarm/config/: agents.yaml  tasks.yaml
